@@ -5,6 +5,10 @@ CHANGELOG
    Those changes are not all listed here.
 ** For a while this is going to ONLY INCLUDE BREAKING CHANGES.
 
+2024/01/09:
+- TestEngine: Added ImGuiTestContext::KeySetEx() to manipulate keys with precise timings.
+  (most other functions add yields to accomodate for common use cases).
+
 2024/01/08:
 - TestEngine: Avoid allocations in IM_CHECK_XX macros.
 
